<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".entities.site.ActivityEditSite"
    tools:ignore="HardcodedText"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/small_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/site_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/big_padding">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_site_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:hint="@string/edit_text_site_title"/>
            </com.google.android.material.textfield.TextInputLayout>
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/site_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/site_title_layout"
                android:paddingTop="@dimen/big_padding">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_site_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/edit_text_site_description"
                    android:maxLines="3"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/row_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/site_description_layout"
                android:baselineAligned="false"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/site_habitat_type_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/big_padding">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_site_habitat_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/edit_text_site_habitat_type"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/site_altitude_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/big_padding">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_site_altitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/edit_text_site_altitude"
                        android:inputType="numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row_03"
                android:baselineAligned="false"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/site_latitude_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/big_padding">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_site_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/edit_text_site_latitude"
                        android:inputType="numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/site_longitude_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/big_padding">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_site_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/edit_text_site_longitude"
                        android:inputType="numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row_04"
                android:paddingTop="@dimen/big_padding">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_site_comment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/edit_text_site_comment"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/huge_padding"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_save"
        android:contentDescription="ADD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
